# SSRL-for-cardiovascular-risk-prediction

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/ssrl_ecg/: __init__.py  analyze_datasets.py  evaluate.py  train_finetune.py  train_ssl.py  train_ssl_contrastive.py  train_supervised.py  train_traditional_ml.py  transfer_mitbih.py  utils.py  visualization.py
src/ssrl_ecg/models/: __init__.py  cnn.py
