[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ssrl-ecg"
version = "0.1.0"
description = "Self-supervised representation learning for ECG-based cardiovascular risk prediction"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "torch>=2.2",
    "tqdm>=4.66",
    "wfdb>=4.1",
    "pyyaml>=6.0",
    "matplotlib>=3.5",
]

[project.optional-dependencies]
dev = ["black>=23.0", "pytest>=7.0"]
